# mado

./: .codecov.yml  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  deny.toml  eslint.config.mjs  justfile  nuxt.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  uno.config.mjs
.cargo/: mutants.toml
.github/workflows/: build-artifacts.yml  build.yaml  nightly-fullcheck.yml  quality-gate.yml
apps/mado/: Cargo.toml
apps/mado-demo/: Cargo.toml
apps/mado-demo/src/: index.rs  main.rs  title_bar.rs
apps/mado/src/: main.rs
crates/download/: Cargo.toml
crates/download/src/: backend.rs  config.rs  error.rs  event.rs  lib.rs  manager.rs  native_http.rs  plan.rs  service.rs  storage.rs  verify.rs
crates/download/tests/: minecraft_real_network.rs  native_http.rs
crates/icons/: Cargo.toml  build.rs
crates/icons/src/: icon_name.rs  lib.rs
crates/icons/tests/: assets.rs
crates/java-runtime/: Cargo.toml
crates/java-runtime/src/: architecture.rs  detect.rs  error.rs  lib.rs  metadata.rs  probe.rs  runtime.rs  vendor.rs  version.rs
crates/java-runtime/tests/: detect_real_jdks.rs
docs/: COMPATIBILITY_MATRIX.md  DEVELOPMENT_SETUP.md  TESTING_STRATEGY.md
docs/plan/: STRUCTURE.md
docs/plan/concepts/: download-pipeline.md  instance-spec.md  launch-plan.md  launch-state.md  version-resolution.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: download_manager_state.rs  download_partial_metadata.rs  download_resume_decision.rs  icon_name.rs  java_runtime_metadata.rs
fuzz/seeds/download_partial_metadata/: huge-downloaded  missing-validator  old-schema  sha256-checksum  valid-etag
fuzz/seeds/java_runtime_metadata/: probe-control-looking-value  probe-missing-version  probe-noisy-stderr  probe-rust-command-exec-looking-value  probe-rust-include-path-looking-value  probe-temurin-java21  release-bidi-looking-value  release-duplicate-version  release-empty-values  release-liberica-java21  release-long-version  release-malformed-quotes  release-missing-version  release-openjdk-unknown-arch  release-oracle-java25  release-overlong-vendor  release-rust-build-script-like-values  release-rust-proc-macro-like-values  release-shell-like-values  release-temurin-java8  release-zulu-java17
scripts/: mutants-gate.sh
src/: app.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/meta/: index.ts
src/components/layout/: AppBar.vue  CloseButton.vue  MenuButton.vue
src/layout/: default.vue
src/layouts/: default.vue
src/pages/: hello.vue  index.vue
src/utils/: eslint-config.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
