[package]
name = "mado-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mado-java-runtime = { path = "../crates/java-runtime" }

[[bin]]
name = "icon_name"
path = "fuzz_targets/icon_name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "java_runtime_metadata"
path = "fuzz_targets/java_runtime_metadata.rs"
test = false
doc = false
bench = false

[workspace]
