[package]
name = "mado-app"
version = "0.1.0-alpha.1"
description = "A Tauri App"
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
authors = [ "Yi Jin <z.work.zeithrold.dev>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mado"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = [
  "derive",
  "typescript"
] }
tauri-plugin-os = "2"
tauri-plugin-process = "2"
