[package]
name = "mado-icons"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["anyhow", "gpui-component"]

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true

[build-dependencies]
anyhow.workspace = true
flate2.workspace = true
serde_json.workspace = true
sha1.workspace = true
tar.workspace = true
ureq.workspace = true

[lints]
workspace = true
